Complete the basic layout for the dashboard

--- a/frontend/src/dashboard.html
+++ b/frontend/src/dashboard.html
@@ -14,15 +14,135 @@
 
 <body>
   <main>
-    <article>
-      <h1>Dashboard</h1>
-    </article>
+    <nav>
+      <ul>
+        <li>
+          <a href="#" class="navigation">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+            </svg>
+          </a>
+          <a>Pet App</a>
+        </li>
 
-    <aside>
-      <form action="login.html">
-        <button type="submit" value="signup">Sign out</button>
+        <li>
+          <a class="location">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="size-4">
+            <path fill-rule="evenodd" d="m7.539 14.841.003.003.002.002a.755.755 0 0 0 .912 0l.002-.002.003-.003.012-.009a5.57 5.57 0 0 0 .19-.153 15.588 15.588 0 0 0 2.046-2.082c1.101-1.362 2.291-3.342 2.291-5.597A5 5 0 0 0 3 7c0 2.255 1.19 4.235 2.292 5.597a15.591 15.591 0 0 0 2.046 2.082 8.916 8.916 0 0 0 .189.153l.012.01ZM8 8.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z" clip-rule="evenodd" />
+            </svg>
+          </a>
+          <a>Current Address</a>
+        </li>
+        
+        <li>
+          <a href="login.html" class="signout">Sign out</a>
+        </li>
+      </ul>
+    </nav>
+
+    <header>
+      <h2>Find what best suits you!</h2>
+      <form>
+        <input type="text" id="search" name="search" placeholder="Search" class="search">
       </form>
-    </aside>
+    </header>
+
+    <section>
+      <h1>Services</h1>
+
+      <div class="services">
+        <figure>
+          <img src="/frontend/public/images/placeholder.webp" alt="Service 1">
+          <figcaption>Service 1</figcaption>
+        </figure>
+
+        <figure>
+          <img src="/frontend/public/images/placeholder.webp" alt="Service 2">
+          <figcaption>Service 2</figcaption>
+        </figure>
+
+        <figure>
+          <img src="/frontend/public/images/placeholder.webp" alt="Service 3">
+          <figcaption>Service 3</figcaption>
+        </figure>
+
+        <figure>
+          <img src="/frontend/public/images/placeholder.webp" alt="Service 4">
+          <figcaption>Service 4</figcaption>
+        </figure>
+
+        <figure>
+          <img src="/frontend/public/images/placeholder.webp" alt="Service 5">
+          <figcaption>Service 5</figcaption>
+        </figure>
+      </div>
+    </section>
+
+    <section>
+      <h1>Top Rated Contractors</h1>
+
+      <div class="services">
+        <figure>
+          <img src="/frontend/public/images/placeholder.webp" alt="Contractor 1">
+          <figcaption>Service 1</figcaption>
+          <div>
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+          </div>
+        </figure>
+
+        <figure>
+          <img src="/frontend/public/images/placeholder.webp" alt="Contractor 2">
+          <figcaption>Service 2</figcaption>
+          <div>
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+          </div>
+        </figure>
+
+        <figure>
+          <img src="/frontend/public/images/placeholder.webp" alt="Contractor 3">
+          <figcaption>Service 3</figcaption>
+          <div>
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+          </div>
+        </figure>
+
+        <figure>
+          <img src="/frontend/public/images/placeholder.webp" alt="Contractor 4">
+          <figcaption>Service 4</figcaption>
+          <div>
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+          </div>
+        </figure>
+
+        <figure>
+          <img src="/frontend/public/images/placeholder.webp" alt="Contractor 5">
+          <figcaption>Service 5</figcaption>
+          <div>
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+          </div>
+        </figure>
+      </div>
+    </section>
   </main>
 </body>
 </html>
