--- a/frontend/src/signup.html
+++ b/frontend/src/signup.html
@@ -15,7 +15,7 @@
 <body>
   <main>
     <article>
-      <form action="login.html" method="POST">
+      <form action="login.html">
         <h1>Sign up</h1>
 
         <input type="text" id="fname" name="fname" placeholder="First Name" class="user-info" required><br>
