Add placeholder images to the dashboard

--- a/frontend/src/dashboard.html
+++ b/frontend/src/dashboard.html
@@ -52,27 +52,27 @@
 
       <div class="services">
         <figure>
-          <img src="/frontend/public/images/placeholder.webp" alt="Service 1">
+          <img src="/frontend/public/images/service.webp" alt="Service 1">
           <figcaption>Service 1</figcaption>
         </figure>
 
         <figure>
-          <img src="/frontend/public/images/placeholder.webp" alt="Service 2">
+          <img src="/frontend/public/images/service.webp" alt="Service 2">
           <figcaption>Service 2</figcaption>
         </figure>
 
         <figure>
-          <img src="/frontend/public/images/placeholder.webp" alt="Service 3">
+          <img src="/frontend/public/images/service.webp" alt="Service 3">
           <figcaption>Service 3</figcaption>
         </figure>
 
         <figure>
-          <img src="/frontend/public/images/placeholder.webp" alt="Service 4">
+          <img src="/frontend/public/images/service.webp" alt="Service 4">
           <figcaption>Service 4</figcaption>
         </figure>
 
         <figure>
-          <img src="/frontend/public/images/placeholder.webp" alt="Service 5">
+          <img src="/frontend/public/images/service.webp" alt="Service 5">
           <figcaption>Service 5</figcaption>
         </figure>
       </div>
@@ -83,8 +83,8 @@
 
       <div class="services">
         <figure>
-          <img src="/frontend/public/images/placeholder.webp" alt="Contractor 1">
-          <figcaption>Service 1</figcaption>
+          <img src="/frontend/public/images/contractor.webp" alt="Contractor 1">
+          <figcaption>Contractor 1</figcaption>
           <div>
             <span class="star">&#9733;</span>
             <span class="star">&#9733;</span>
@@ -95,8 +95,8 @@
         </figure>
 
         <figure>
-          <img src="/frontend/public/images/placeholder.webp" alt="Contractor 2">
-          <figcaption>Service 2</figcaption>
+          <img src="/frontend/public/images/contractor.webp" alt="Contractor 2">
+          <figcaption>Contractor 2</figcaption>
           <div>
             <span class="star">&#9733;</span>
             <span class="star">&#9733;</span>
@@ -107,8 +107,8 @@
         </figure>
 
         <figure>
-          <img src="/frontend/public/images/placeholder.webp" alt="Contractor 3">
-          <figcaption>Service 3</figcaption>
+          <img src="/frontend/public/images/contractor.webp" alt="Contractor 3">
+          <figcaption>Contractor 3</figcaption>
           <div>
             <span class="star">&#9733;</span>
             <span class="star">&#9733;</span>
@@ -119,8 +119,8 @@
         </figure>
 
         <figure>
-          <img src="/frontend/public/images/placeholder.webp" alt="Contractor 4">
-          <figcaption>Service 4</figcaption>
+          <img src="/frontend/public/images/contractor.webp" alt="Contractor 4">
+          <figcaption>Contractor 4</figcaption>
           <div>
             <span class="star">&#9733;</span>
             <span class="star">&#9733;</span>
@@ -131,8 +131,8 @@
         </figure>
 
         <figure>
-          <img src="/frontend/public/images/placeholder.webp" alt="Contractor 5">
-          <figcaption>Service 5</figcaption>
+          <img src="/frontend/public/images/contractor.webp" alt="Contractor 5">
+          <figcaption>Contractor 5</figcaption>
           <div>
             <span class="star">&#9733;</span>
             <span class="star">&#9733;</span>
