--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -25,7 +25,7 @@
 
       <h1>Login</h1>
 
-      <form action="dashboard.html">
+      <form action="dashboard.html" method="POST">
         <input type="username" id="username" name="username" placeholder="Username" class="user-info" required><br>
         <input type="password" id="password" name="password" placeholder="Password" class="user-info" required><br>
         <input type="checkbox" id="remember" name="remember">
@@ -33,7 +33,7 @@
         <button type="submit" value="dashboard">Sign In</button>
       </form>
 
-      <form action="signup.html">
+      <form action="signup.html" method="POST">
         <button type="submit" value="signup" id="signup">Sign up</button>
       </form>
     </article>
